# Volume-Monte-Carlo

./: .gitignore  CMakeLists.txt  DeviceInfo.cu  MonteCarlo.cu  MonteCarlo.cuh  README.md  entrypoint.sh  main.cu  plane.cuh
app/: DeviceInfo.cuh  MonteCarlo.cu  MonteCarlo.cuh  plane.cu  plane.cuh  planeGPU.cu  planeGPU.cuh
